--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+build/
+
 # Compiled Object files
 *.slo
 *.lo
@@ -27,3 +29,10 @@
 *.exe
 *.out
 *.app
+
+# Apple.
+*.DS_Store
+
+# Cmake.
+cmake-xcode
+cmake-build
